[package]
name = "investing"
version = "0.0.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
deadqueue = "0.2.4"
derive_more = { version = "2.0.1", features = ["from", "into"] }
log = "0.4.26"
prost = "0.13.5"
prost-types = "0.13.5"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.12.3", features = ["gzip", "tls", "tls-native-roots"] }
uuid = { version = "1.14.0", features = ["v4"] }


[build-dependencies]
tonic-build = { version = "0.12" }
