[package]
name = "yatis"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["investing", "invest", "t-bank", "tbank", "tinkoff"]
description = "Yet Another T-bank Investment Sdk"
repository = "https://github.com/bool-rus/yatis"

[dependencies]
async-channel = "2.3.1"
deadqueue = "0.2.4"
derive_more = { version = "2.0.1", features = ["from", "into"] }
futures = "0.3.31"
log = "0.4.26"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["gzip", "tls", "tls-native-roots"] }
uuid = { version = "1.14.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.12" }

[dev-dependencies]
simplelog = "0.12.2"

